--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -5,8 +5,21 @@ body{
 }
 
 
-main{
+.content{
+    @include flex($flex-direction: column);
     flex-grow: 1;
     color: $dark-900;
     background-color: $dark-100;
+    padding: 8px;
+}
+
+.pokemon-list{
+    max-height: 80vh;
+    overflow: scroll;
+}
+
+.load-more-btn{
+    max-width: fit-content;
+    padding: 8px 16px;
+    margin: 0 auto;
 }
