--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -18,14 +18,14 @@ $types: (
   fire:     #ff7b54,
   water:    #58a6ff,
   electric: #f7d02c,
-  grass:    #3fb950,
+  grass:    #38a847,
   ice:      #76c7c0,
   fighting: #d73a49,
   poison:   #c77dff,
   ground:   #e3b341,
   flying:   #a5a2ff,
   psychic:  #ff6fae,
-  bug:      #7ee787,
+  bug:      #57e663,
   rock:     #c9b458,
   ghost:    #8b5cf6,
   dragon:   #7c7cff,
