--- a/src/styles/abstracts/_index.scss
+++ b/src/styles/abstracts/_index.scss
@@ -1,3 +1,4 @@
 //@forward "./_PATH";
-@forward "./_mixins";
-@forward "./_functions";
+@forward "./mixins";
+@forward "./functions";
+@forward "./variables";
