--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -1,6 +1,14 @@
 @use "sass:map";
 @use "sass:color";
 @use "../base/colors" as *;
+@use "./variables" as *;
+@use "./functions" as *;
+
+@mixin breakpoint($breakpoint) {
+    @media screen and (min-width: get-min-width($breakpoint)) {
+        @content;
+    }
+}
 
 @mixin flex( $flex-direction: row, $flex-wrap: wrap, $justify-content: flex-start, $align-items: stretch) {
     display: flex;
@@ -15,7 +23,7 @@
     .card.type-#{$name} {
       background-image: linear-gradient(
         135deg,
-        color.adjust($color, $lightness: 14%),
+        color.adjust($color, $lightness: 4%),
         $color,
         color.adjust($color, $lightness: -8%)
       );
