--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -4,11 +4,11 @@
 
 
 .card {
-    
+    min-width: 280px;
     padding: 16px;
     border: 6px solid $dark-400;
     border-radius: 16px;
-    margin: 16px 8px;
+    margin: 16px;
     background-size: 200% 200%;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
     @include flex($flex-direction: column);
@@ -22,7 +22,7 @@
     &__header{
         @include flex($justify-content: space-between);
         padding: 16px 8px;
-        font-size: 21px;
+        font-size: 26px;
         font-weight: 900;
         
 
@@ -33,8 +33,10 @@
 
     &__image {
         width: 100%;
+        max-height: 150px;
         max-width: 140px;
-        margin: 0 auto 8px;
+        aspect-ratio: 1/1;
+        margin: 16px auto;
         display: block;
 
         filter: drop-shadow(0 12px 18px rgba(0, 0, 0, 0.45));
@@ -51,7 +53,6 @@
     &__types{
         display: flex;
         gap: 6px;
-        margin-top: 24px;
     }
 }
 
@@ -60,7 +61,7 @@
   padding: 4px 8px;
   border-radius: 12px;
   border: $dark-400 solid 1px;
-  font-size: 14px;
+  font-size: 17px;
   font-weight: 600;
   color: $dark-900;
   background: #666;
