--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,4 +1,5 @@
 @use "../base/colors" as *;
+@use "../abstracts/mixins" as *;
 
 footer{
     background-color: $dark-100;
@@ -6,4 +7,10 @@ footer{
     text-align: center;
     padding: 16px;
     color: $dark-900;
+    @include flex($flex-direction: column);
+    
+  @include breakpoint(big){
+    padding-left: calc((100% - 1440px) / 2);
+    padding-right: calc((100% - 1440px) / 2);
+  }
 }
