--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -13,10 +13,18 @@
     transition: transform 0.2s ease, box-shadow 0.2s ease;
     @include flex($flex-direction: column);
 
-    &:hover{
+    &:hover {
         transform: translateY(-4px);
         box-shadow: 0 10px 25px rgba(0,0,0,0.25);
         cursor: pointer;
+
+        .card__image{
+            transform: scale(1.08);
+            filter:
+                drop-shadow(0 12px 20px rgba(0, 0, 0, 0.45))
+                drop-shadow(0 0 22px rgba(255, 255, 255, 0.65));
+            
+        }
     }
 
     &__header{
@@ -42,12 +50,6 @@
         filter: drop-shadow(0 12px 18px rgba(0, 0, 0, 0.45));
         transition: transform 0.2s ease, filter 0.2s ease;
 
-        &:hover{  
-            transform: scale(1.08);
-            filter:
-                drop-shadow(0 12px 20px rgba(0, 0, 0, 0.45))
-                drop-shadow(0 0 22px rgba(255, 255, 255, 0.65));
-            }
     }
 
     &__types{
