--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -28,10 +28,17 @@ body{
 
 .load-more-btn{
     max-width: fit-content;
-    padding: 8px 24px;
+    padding: 8px 40px;
     margin: 24px auto;
     border-radius: 16px;
     background-color: $red-500;
+    transition: transform 0.2s ease;
+    cursor: pointer;
+    
+    &:hover{
+        transform: scale(1.1);
+        background-color: $red-600;
+    }
 }
 
 .no-results{
